--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,23 +9,23 @@
     "scminput": false
   },
   "workbench.colorCustomizations": {
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#4463d8",
-    "statusBar.background": "#2848c1",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#4463d8",
-    "statusBarItem.remoteBackground": "#2848c1",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#2848c1",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#2848c199",
-    "titleBar.inactiveForeground": "#e7e7e799",
-    "activityBar.activeBackground": "#4463d8",
-    "activityBar.background": "#4463d8",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#691627",
-    "activityBarBadge.foreground": "#e7e7e7"
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#ce8dfd",
+    "statusBar.background": "#b95bfc",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#a429fb",
+    "statusBarItem.remoteBackground": "#b95bfc",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#b95bfc",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#b95bfc99",
+    "titleBar.inactiveForeground": "#15202b99",
+    "activityBar.activeBackground": "#ce8dfd",
+    "activityBar.background": "#ce8dfd",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#fef2e0",
+    "activityBarBadge.foreground": "#15202b"
   },
   "peacock.color": "#b95bfc",
 }
